added close option to countDisplay

--- a/capstone/final/index.html
+++ b/capstone/final/index.html
@@ -270,21 +270,18 @@
         </div>  
     </div> 
 
-    <div id="countDisplay1" class="hidden">
-        <span class="close" id="closeDisplay1" onClick="lightbox_close()">&times;</span>
-        Count will be displayed here
-    </div>
-    <div id="countDisplay2" class="hidden">Count will be displayed here</div>
-    <div id="countDisplay3" class="hidden">Count will be displayed here</div>
-    <div id="countDisplay4" class="hidden">Count will be displayed here</div>
-    <div id="countDisplay5" class="hidden">Count will be displayed here</div>
-    <div id="countDisplay6" class="hidden">Count will be displayed here</div>
-    <div id="countDisplay7" class="hidden">Count will be displayed here</div>
-    <div id="countDisplayy8" class="hidden">Count will be displayed here</div>
-    <div id="countDisplay9" class="hidden">Count will be displayed here</div>
-    <div id="countDisplay10" class="hidden">Count will be displayed here</div>
-    <div id="countDisplay11" class="hidden">Count will be displayed here</div>
-    <div id="countDisplayy12" class="hidden">Count will be displayed here</div>
+    <div id="countDisplay1" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay2" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay3" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay4" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay5" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay6" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay7" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay8" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay9" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay10" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay11" class="hidden light">Count will be displayed here</div>
+    <div id="countDisplay12" class="hidden light">Count will be displayed here</div>
                         
 </body>
 
