added imgs to visual design

--- a/capstone/case study/index.html
+++ b/capstone/case study/index.html
@@ -90,8 +90,8 @@
             <h2>Visual Design</h2>
             <div class="content">
                 <div>
-                    <img src="https://via.placeholder.com/600">
-                    <img src="https://via.placeholder.com/600">
+                    <img src="imgs/Type.png">
+                    <img src="imgs/Colors.png">
                 </div>
                 <div>
                     <h3>Development</h3>
