--- a/capstone/case study/index.html
+++ b/capstone/case study/index.html
@@ -45,7 +45,7 @@
     <section id="overview">
         <div class="container">
             <h2>Project Overview</h2>
-            <img src="https://via.placeholder.com/1000x300">
+            <img src="imgs/overview.png">
             <div class="content">
                 <div>
                     <h3>Project Brief</h3>
@@ -79,7 +79,7 @@
 
                 <p>Creating user personas helped in understanding the needs, goals, and pain points of the target audience. Journey mapping will outline the steps users take to engage with the platform, identifying opportunities for enhancing their experience.</p>
 
-                <img src="https://via.placeholder.com/600">
+                <img src="imgs/research.png">
             </div>
         </div>
     </section>
@@ -156,8 +156,8 @@
                     </div>
                 </div>
                 <div>
-                    <img src="https://via.placeholder.com/400x600">
-                    <img src="https://via.placeholder.com/400x600">
+                    <img src="imgs/visual1.png" style="width:600px;height:600px;">
+                    <img src="imgs/visual2.png" style="width:600px;height:600px;">
                 </div>
             </div>
         </div>
@@ -204,7 +204,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, doloribus quasi quis veritatis soluta aliquid fuga laudantium, perferendis odit beatae voluptate a labore aliquam velit enim necessitatibus ullam alias maiores..</p>
                 </div>
             </div>
-            <img src="https://via.placeholder.com/1000x300">
+            <!-- <img src="https://via.placeholder.com/1000x300"> -->
         </div>
     </section>
 
